# music_pirate

./: .gitignore  LICENSE  README.md  pyproject.toml
music_pirate/: downloader.py  enrichment.py  music_pirate.py
